K8s-Wafra/wafra-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wafra-api
spec:
  replicas: 5
  selector:
    matchLabels:
      app: wafra-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: wafra-api
    spec:
      containers:
        - name: wafra-api
          image: abobker/wafra-api:1.2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
