K8s-Wafra/wafra-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wafra-api-service
spec:
  type: NodePort
  selector:
    app: wafra-api     
  ports:
    - port: 80          
      targetPort: 8080    
      nodePort: 30080
